# systemrdl-compiler

./: .coveragerc  .coveralls.yml  .gitattributes  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  LICENSE  LICENSE-3RD-PARTY  MANIFEST.in  README.asc  README.md  publish.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: Makefile  README.md  conf.py  example.rst  examples.rst  index.rst  known_issues.rst  make.bat  model_structure.rst  model_traversal.rst  multi_file_compilation.rst  print_hierarchy_spi.stdout  properties.csv  properties.rst  property_reference.rst  rdl_spec_errata.rst  requirements.txt  supported_features.rst
example/: rdl_test.py  test.rdl
examples/: README.md  accelera-generic_example.rdl  atxmega_spi.rdl  export_json.py  import_json.py  print_hierarchy.py  tiny.json  tiny.rdl
src/: rdl_compiler.py
systemrdl/: __about__.py  __init__.py  compiler.py  component.py  exporter.py  importer.py  messages.py  node.py  rdltypes.py  source_ref.py  udp.py  walker.py  warnings.py
test/: .coveragerc  .gitignore  expr_test.py  mypy.ini  pylint.rc  rdl_test.py  rdl_unittest.py  rdl_unittest_base.py  requirements.txt  run.sh  run_lint.sh  run_unittests.sh  test.rdl  test_accesstype.py  test_aliases.py  test_api_type_hints.py  test_bridge.py  test_counters.py  test_dpa_type_names.py  test_dpas.py  test_enums.py  test_errors.py  test_expressions.py  test_external.py  test_global_type_names.py  test_hetero_array.py  test_importer.py  test_inferred_placement.py  test_interleaved_array.py  test_intr_prop.py  (+22 more)
(+373 files in other folders)
