[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "systemrdl-compiler"
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
    "antlr4-python3-runtime >= 4.11, < 4.14",
    "colorama",
    "markdown",
    "typing_extensions",
]
authors = [
    {name="Alex Mykyta"},
]
description="Parse and elaborate front-end for SystemRDL 2.0"
readme = "README.md"
license = {text = "MIT"}
keywords = [
    "SystemRDL", "CSR", "compiler", "tool", "registers", "generator",
    "register abstraction layer", "FPGA", "ASIC",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Code Generators",
]

[project.urls]
Source = "https://github.com/SystemRDL/systemrdl-compiler"
Tracker = "https://github.com/SystemRDL/systemrdl-compiler/issues"
Changelog = "https://github.com/SystemRDL/systemrdl-compiler/releases"
Documentation = "http://systemrdl-compiler.readthedocs.io"

[tool.setuptools.dynamic]
version = {attr = "systemrdl.__about__.__version__"}
